# fiap_tech_challenge_01

./: Makefile  README.md  github.txt  pyproject.toml  requirements.txt
models/: SALVAR_MODELOS_GUIA.md  linear_regression_nps.joblib  melhor_modelo_info.json  models.py  rf_metrics.json
notebooks/: teach_challenge.ipynb
notebooks/models/: gradient_boosting_nps.joblib  xgboost_nps.joblib
