[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tech_challenge_01"
version = "0.0.1"
description = "NPA Data Project"
authors = [
  { name = "Lucas Ruiz" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["tech_challenge_01"]
include = ["pyproject.toml", "tech_challenge_01/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["tech_challenge_01"]
force-sort-within-sections = true

